styles/main.css
/* Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;600&display=swap');

/*
  CSS Reset
*/

*, *::before, *::after {
  box-sizing: border-box;
}
* {
  margin: 0;
}
html, body {
  height: 100%;
}
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
input, button, textarea, select {
  font: inherit;
}
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

/* 
  End of CSS Reset
*/


:root{
  --color-background: hsl(300, 1%, 20%);
  --color-main-text: hsl(37, 63%, 83%); 


  --font-header: 'Vollkorn', serif;
  --font-body: 'Quicksand', sans-serif;

  --font-weight-light: 400;
  --font-weight-medium: 500;
  --font-weight-heavy: 600;

  --color-yellow: hsl(44, 100%, 50%);
  --color-teal:  hsl(163, 26%, 48%);
  --color-blue: hsl(206, 47%, 59%);
  --color-red: hsl(11, 71%, 44%);
  --color-gray-100: hsl(210, 15%, 20%);
  --color-brown: hsl(330, 2%, 20%);

  --yellow-hover:   hsl(44, 100%, 64%);
  --teal-hover: hsl(163, 26%, 57%);
}

body{
  background-color: var(--color-background);
  color: var(--color-main-text);
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background-image: url(//github-atom-io-herokuapp-com.freetls.fastly.net/assets/index-teletype-graphic-cf60b66bbb2b00e1e4e9f8020b9fa59b6084d77ed4c7a3c4e0cdab5848aabca7.svg); 
  background-position: calc(50% - 1140px) center;
  background-repeat: no-repeat;
}

@font-face{
  font-family: 'Quicksand';
  src: url('Quicksand.woff2') format('woff2 supports variations'),
      url('Quicksand.woff2') format('woff2-variations');
      font-weight: 300 600;
      font-stretch: 25% 151%;
}

.wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background-position: calc(50% - 1140px) center;
  max-width: 1000px;
  border: 1px solid #4e4b4d;
  border-radius: 8px;
  padding: 4rem;
}

.compare-container{
  margin-bottom: 32px;
  width: 750px;
  padding: 0rem 1rem;
}

.compare-container h2{
  padding-bottom: 0.5rem;
  font-family: var(--font-header);
  font-size: 2rem;
}

.compare-container img{
  display: block;
  width: 100%;
}

.hidden{
  display:none;
  opacity: 0;
}


.card-one img{
  position: relative;
  opacity: 1;
  animation:fadeIn 0.3s ease-in;
}

.card-two img{
  position: relative;
  animation:fadeIn 0.3s ease-in;
}

@keyframes fadeIn{
  from {
   opacity: 0;
  }
  to {
    opacity: 1;
  }
 }   

/* .expand-Img-1 img, .expand-Img-2 img{
  transform: scale(0.7);
} */

.expand-Img-1{
  width: 450px;
  -webkit-animation: scaleDownLeft 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s both;
  animation: scaleDownLeft 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s both;
}

.expand-Img-2{
  width: 450px;
  -webkit-animation: scaleDownRight 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s both;
  animation: scaleDownRight 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s both;
}

.button-wrapper{
  display: flex;
  gap: 1rem;
}

.btn{
  display: block;
  width: 12rem;
  font-size: 1.5rem;
  font-weight: 350;
  letter-spacing: 1px;
  font-family: var(--font-body);
  border-radius: 5px;
  cursor: pointer;
  text-transform: uppercase;
  padding: 0.8rem 2rem;
  border: 0;
  transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
}

.btn.toggle{
  background-color: var(--color-yellow);

}

.toggle:hover:not([disabled]){
  background-color: var(--yellow-hover);
  font-weight: 600;
  transform: translateY(-2px);
}

.toggle:active:not([disabled]){
  transform: scale(0.9);
}

.expand{
  background-color: var(--color-teal);
}
.expand:hover{
  background-color: var(--teal-hover);
  font-weight: 600;
  transform: translateY(-2px);
}

.expand:active {
  transform: scale(0.9);
}


/*
 * ----------------------------------------
 * animation scale-down-left
 * ----------------------------------------
 */
 
@keyframes scaleDownLeft {
  0% {
    -webkit-transform: scale(1.2);
            transform: scale(1.2);
    -webkit-transform-origin: 100% 50%;
            transform-origin: 100% 50%;
  }
  100% {
    -webkit-transform: scale(0.95);
            transform: scale(0.95);
    -webkit-transform-origin: 0% 50%;
            transform-origin: 0% 50%;
  }
}

/*
 * ----------------------------------------
 * animation scale-down-right
 * ----------------------------------------
 */
 
@keyframes scaleDownRight {
  0% {
    -webkit-transform: scale(1.1);
            transform: scale(1.1);
    -webkit-transform-origin: 0% 50%;
            transform-origin: 0% 50%;
  }
  100% {
    -webkit-transform: scale(0.95);
            transform: scale(0.95);
    -webkit-transform-origin: 100% 50%;
            transform-origin: 100% 50%;
  }
}



/* 
@keyframes bounce{
  from {
    transform: translateY(-500px);
  }
  to {
    transform: translateY(0);
  }
 }    */

